# particle_colision

./: .gitignore  CMakeLists.txt  Makefile  particles  particles_cuda  particles_mpi
ai_implementation/particle_collision/: README.md  particles
ai_implementation/particle_collision/src/: draw.c  draw.h  main.c  physics.c  physics.h
include/: grid.h  io.h  parallel.h  particles.h  physics.h
src/: draw.c  draw.h  grid.c  io.c  main.c  main_mpi.c  particles.c  physics.c  physics.h  physics_cuda.cu  physics_mpi.c  physics_mpi.h
